# src/routes/transactions/index.ts
@@ -1,0 +1,10 @@
+import { Router } from "express"
+import { Auth, UserIsAdmin } from "../../utils/middlewares"
+import { get, get_all} from "../../services/Transaction"
+
+const router = Router()
+
+router.route("").get( Auth, get )
+router.route("/all").get( Auth, UserIsAdmin, get_all )
+
+export default router
