# src/server.ts
@@ -18,6 +18,7 @@ import promocode from "./routes/promocode"
 import order from "./routes/order"
 import users from "./routes/users"
 import hook from "./routes/hook"
+import transaction from "./routes/transactions"
 
 const PORT = process.env.PORT || 5000
 
@@ -55,6 +56,7 @@ app.use("/promocode", promocode)
 app.use("/order", order)
 app.use("/users", users)
 app.use("/hook", hook)
+app.use("/transaction", transaction)
 
 app.get("/health", (_req: Request, res: Response) => {
     return res.status(200).send()
